// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingSpinner testClass1 testClass2 emotion-euiLoadingSpinner-m"
  data-test-subj="test subject string"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-l"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size s is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-s"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-xl"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size xxl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-xxl"
  role="progressbar"
/>
`;
